--- a/scss/_responsive/_responsive.scss
+++ b/scss/_responsive/_responsive.scss
@@ -5,6 +5,59 @@
 
 */
 
+* {
+    margin: 0;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.container-full {
+    margin: 0;
+}
+
+.align-items-center {
+    align-items: center;
+}
+
+.justify-content-around {
+    justify-content: space-around;
+}
+
+.justify-content-between {
+    justify-content: space-between
+}
+
+.justify-content-evenly {
+    justify-content: space-evenly;
+}
+
+section {
+    display: flex;
+    justify-content: center;
+    max-width: 1024px;
+    margin: 0 auto;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+@media screen and (max-width:768px) {
+    .row {
+        flex-direction: row;
+    }
+}
+
 
 /* GLOBAL GRID */
 
@@ -62,7 +115,7 @@
 
 /* ---------------MOBILE--------------- */
 
-@media screen and (max-width:768px) {
+@media screen and (min-width:300px) {
     .col-1 {
         width: 8.333333333333333%;
     }
@@ -104,7 +157,7 @@
 
 /* --------------TABLETS---------------- */
 
-@media screen and (max-width:992px) {
+@media screen and (min-width:768px) and (max-width:1024px) {
     .col-md-1 {
         width: 8.333333333333333%;
     }
@@ -146,7 +199,7 @@
 
 /* --------------Desktop---------------- */
 
-@media screen and (min-width:993px) {
+@media screen and (min-width:1025px) {
     .col-lg-1 {
         width: 8.333333333333333%;
     }
