--- a/scss/_fonts/_fonts.scss
+++ b/scss/_fonts/_fonts.scss
@@ -149,14 +149,14 @@ header {
         margin-top: 5%;
         text-align: right;
         color: none;
-        background: linear-gradient(270.2deg, #7EC9F5 9.69%, #3957ED 81.09%);
+        background: linear-gradient(270.2deg, #00a1ff 9.69%, #3957ED 81.09%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         font-weight: 400;
         font-size: 64px;
     }
     & h5 {
-        color: $lowContrast;
+        color: $highContrast;
         text-align: end;
     }
     & p {
