Full Dark mode done

--- a/scss/_colors/_colors.scss
+++ b/scss/_colors/_colors.scss
@@ -3,4 +3,5 @@ $secondary: #3957ED;
 $base: #f6f6f6;
 $lowContrast: #A5AFB6;
 $highContrast: #374249;
-$darkMode: #252C4F
+$darkMode: #252C4F;
+$lightText:#acddff;
