--- a/scss/main.css
+++ b/scss/main.css
@@ -133,18 +133,16 @@ header h4 {
   margin-top: 5%;
   text-align: right;
   color: none;
-  background: linear-gradient(270.2deg, #00a1ff 9.69%, #3957ED 81.09%);
+  background: linear-gradient(270.2deg, #00a1ff 9.69%, #5f79fe 81.09%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 400;
   font-size: 64px;
 }
 #aboutMe h5 {
-  color: #374249;
   text-align: end;
 }
 #aboutMe p {
-  color: #374249;
   font-size: 24px;
   text-align: right;
 }
@@ -162,7 +160,6 @@ header h4 {
 }
 
 .light {
-  font-weight: 700;
   font-size: 2em;
 }
 
@@ -182,7 +179,13 @@ html {
 }
 
 .lightText {
-  color: #f6f6f6;
+  color: #acddff;
+  transition: 0.3s ease-in-out;
+}
+
+.darkText {
+  color: #374249;
+  transition: 0.3s ease-in-out;
 }
 
 .toDark {
@@ -237,7 +240,6 @@ nav li {
   text-transform: uppercase;
   font-weight: 400;
   font-size: 20px;
-  color: #374249;
 }
 nav li:hover {
   transition: 0.2s;
@@ -445,7 +447,6 @@ nav li .lightMode .switch {
   font-family: "Montserrat", sans-serif;
   font-weight: medium;
   font-size: 1.5em;
-  color: #374249;
   padding: 10px 20px;
 }
 .categories .active,
