--- a/scss/main.css
+++ b/scss/main.css
@@ -143,10 +143,14 @@ header h4 {
   text-align: end;
 }
 #aboutMe p {
-  font-size: 24px;
   text-align: right;
 }
 
+@media screen and (max-width: 300px) {
+  #aboutMe h2 {
+    font-size: 34px;
+  }
+}
 .title {
   background: linear-gradient(270.2deg, #7EC9F5 0%, #3957ED 125%);
   -webkit-background-clip: text;
@@ -159,10 +163,21 @@ header h4 {
   background: linear-gradient(270.2deg, #7EC9F5 0%, #3957ED 125%);
 }
 
+@media screen and (max-width: 300px) {
+  .title {
+    font-size: 34px;
+  }
+}
 .light {
+  font-weight: 400;
   font-size: 2em;
 }
 
+@media screen and (max-width: 300px) {
+  .light {
+    font-size: 34px;
+  }
+}
 .blue {
   color: #3957ED;
 }
@@ -349,6 +364,7 @@ nav li .lightMode .switch {
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin: 10px 0;
 }
 .circle h2 {
   font-size: 24px;
@@ -385,6 +401,24 @@ nav li .lightMode .switch {
   text-shadow: 5px 3px 0 #A5AFB6;
 }
 
+@media screen and (max-width: 768px) {
+  .circle {
+    width: 120px;
+    height: 120px;
+  }
+  .circle.design {
+    font-size: 10px;
+  }
+  .circle.mkt {
+    font-size: 10px;
+  }
+  .circle.webDev {
+    font-size: 10px;
+  }
+  .circle.userEx {
+    font-size: 14px;
+  }
+}
 .logoLight {
   filter: invert(100%) brightness(110%) contrast(120%) hue-rotate(200deg);
 }
@@ -447,6 +481,7 @@ nav li .lightMode .switch {
   -webkit-padding-start: 0;
           padding-inline-start: 0;
   margin: 2% 0 4% 0;
+  overflow-x: auto;
 }
 .categories li {
   list-style-type: none;
@@ -464,8 +499,14 @@ nav li .lightMode .switch {
   transition: 0.25s;
   border-radius: 30px;
   transition: 0.3s ease-in-out;
+  cursor: pointer;
 }
 
+@media screen and (max-width: 768px) {
+  .categories li {
+    font-size: 1em;
+  }
+}
 /* ----------------SPACING---------------- */
 /* PADDING X */
 .padX-1 {
@@ -774,6 +815,9 @@ section {
 @media screen and (max-width: 768px) {
   .row {
     flex-direction: row;
+  }
+  section {
+    max-width: 90%;
   }
 }
 /* GLOBAL GRID */
