--- a/scss/_components/_components.scss
+++ b/scss/_components/_components.scss
@@ -1,335 +1,371 @@
-html {
-    background-color: #daf9ff;
-    transition: 0.2s ease-in-out;
-}
-
-.darkSite {
-    background-color: $darkMode;
-    transition: 0.2s ease-in-out;
-    color: $base;
-}
-
-.lightText {
-    color: $lightText;
-    transition: 0.3s ease-in-out
-}
-
-.darkText {
-    color: $highContrast;
-    transition: 0.3s ease-in-out
-}
-
-.toDark {
-    position: relative;
-    left: 35px;
-    transition: 0.2s ease-in-out;
-}
-
-body {
-    background-image: url(../../img/blurredBg.svg);
-    background-size: cover;
-    background-repeat: repeat;
-    background-position: top;
-}
-
-header {
-    background-image: url(../../img/bgHeader.svg);
-    background-size: cover;
-    height: 90vh;
-    background-repeat: no-repeat;
-    background-position: bottom;
-}
-
-nav {
-    margin-top: 2%;
-    margin-bottom: 5%;
-    & ul {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        max-width: 1024px;
-        margin: auto;
-        height: 80px;
-        align-items: center;
-        margin-block-start: 0;
-        margin-block-end: 0;
-        margin-inline-start: 0;
-        margin-inline-end: 0;
-        padding-inline-start: 0;
+    html {
+        background-color: #daf9ff;
+        transition: 0.2s ease-in-out;
     }
-    & li {
-        list-style-type: none;
-        font-family: $mainFont;
-        margin-inline-start: 0;
-        text-transform: uppercase;
-        font-weight: 400;
-        font-size: 20px;
-        // color: $highContrast;
-        &:hover {
-            transition: 0.2s;
-            color: $secondary;
-            cursor: pointer;
+    
+    .darkSite {
+        background-color: $darkMode;
+        transition: 0.2s ease-in-out;
+        color: $base;
+    }
+    
+    .lightText {
+        color: $lightText;
+        transition: 0.3s ease-in-out
+    }
+    
+    .darkText {
+        color: $highContrast;
+        transition: 0.3s ease-in-out
+    }
+    
+    .toDark {
+        position: relative;
+        left: 35px;
+        transition: 0.2s ease-in-out;
+    }
+    
+    body {
+        background-image: url(../../img/blurredBg.svg);
+        background-size: cover;
+        background-repeat: repeat;
+        background-position: top;
+    }
+    
+    header {
+        background-image: url(../../img/bgHeader.svg);
+        background-size: cover;
+        height: 90vh;
+        background-repeat: no-repeat;
+        background-position: bottom;
+    }
+    
+    @media screen and (max-width:768px) {
+        header {
+            background-size: cover;
+            height: 90vh;
+            background-repeat: no-repeat;
+            background-position: left;
         }
-        &.active {
-            transition: 0.15s;
-            color: $secondary;
-            font-weight: 900;
-        }
-        & .darkMode {
+    }
+    
+    nav {
+        margin-top: 2%;
+        margin-bottom: 5%;
+        & ul {
             display: flex;
-            position: relative;
-            width: 60px;
-            background-color: $darkMode;
-            height: 30px;
-            border-radius: 30px;
-            border: solid 2px $secondary;
+            flex-direction: row;
+            justify-content: space-between;
+            max-width: 1024px;
+            margin: auto;
+            height: 80px;
             align-items: center;
-            transition: 0.4s;
-            & .switch {
-                width: 25px;
-                height: 25px;
-                border-radius: 50%;
+            margin-block-start: 0;
+            margin-block-end: 0;
+            margin-inline-start: 0;
+            margin-inline-end: 0;
+            padding-inline-start: 0;
+        }
+        & li {
+            list-style-type: none;
+            font-family: $mainFont;
+            margin-inline-start: 0;
+            text-transform: uppercase;
+            font-weight: 400;
+            font-size: 20px;
+            // color: $highContrast;
+            &:hover {
+                transition: 0.2s;
+                color: $secondary;
+                cursor: pointer;
+            }
+            &.active {
+                transition: 0.15s;
+                color: $secondary;
+                font-weight: 900;
+            }
+            & .darkMode {
+                display: flex;
+                position: relative;
+                width: 60px;
+                background-color: $darkMode;
+                height: 30px;
+                border-radius: 30px;
+                border: solid 2px $secondary;
+                align-items: center;
+                transition: 0.4s;
+                & .switch {
+                    width: 25px;
+                    height: 25px;
+                    border-radius: 50%;
+                    background-color: $primary;
+                    align-items: center;
+                    transition: 0.2s ease-in-out;
+                }
+            }
+            & .lightMode {
+                display: flex;
+                position: relative;
+                width: 60px;
                 background-color: $primary;
+                height: 30px;
+                border-radius: 30px;
+                border: solid 2px $base;
                 align-items: center;
-                transition: 0.2s ease-in-out;
-            }
-        }
-        & .lightMode {
-            display: flex;
-            position: relative;
-            width: 60px;
-            background-color: $primary;
-            height: 30px;
-            border-radius: 30px;
-            border: solid 2px $base;
-            align-items: center;
-            transition: 0.4s;
-            & .switch {
-                width: 25px;
-                height: 25px;
-                border-radius: 50%;
-                background-color: $secondary;
-                align-items: center;
-                transition: 0.2s ease-in-out;
+                transition: 0.4s;
+                & .switch {
+                    width: 25px;
+                    height: 25px;
+                    border-radius: 50%;
+                    background-color: $secondary;
+                    align-items: center;
+                    transition: 0.2s ease-in-out;
+                }
             }
         }
     }
-}
-
-.containerHero {
-    position: relative;
-    width: 100%;
-}
-
-.heroBg {
-    width: 90%;
-    display: block;
-    margin: auto;
-    filter: drop-shadow(9px 9px 49px #7EC9F5);
-}
-
-.animationRotate {
-    animation: spin 10s ease-in-out infinite;
-}
-
-@-moz-keyframes spin {
-    100% {
-        -moz-transform: rotate(360deg);
-    }
-}
-
-@-webkit-keyframes spin {
-    100% {
-        -webkit-transform: rotate(360deg);
-    }
-}
-
-@keyframes spin {
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
-
-.phone {
-    position: absolute;
-    transform: translate(50%, -90%);
-    max-width: 50%;
-    display: block;
-    margin: auto;
-}
-
-.arrow {
-    width: 30vw;
-    position: absolute;
-    left: 50px;
-    top: 400px;
-}
-
-.divider {
-    width: 100px;
-    height: 5px;
-    border-radius: 3px;
-    background-color: $secondary;
-    float: right;
-    margin-top: 15px;
-    margin-bottom: 30px;
-}
-
-.circle {
-    border-radius: 100%;
-    width: 150px;
-    height: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin: 10px 0;
-    & h2 {
-        font-size: 24px;
-        text-align: center;
-        align-items: center;
-        color: white;
-    }
-    &.design {
-        background-color: $primary;
-        text-shadow: 5px 3px 0 $primary;
-        & h2 {
-            font-size: 3em;
+    
+    @media screen and (max-width:768px) {
+        nav {
+            & ul {
+                & li {
+                    font-size: 14px;
+                }
+            }
         }
     }
-    &.mkt {
+    
+    .containerHero {
+        position: relative;
+        width: 100%;
+    }
+    
+    .heroBg {
+        width: 90%;
+        display: block;
+        margin: auto;
+        filter: drop-shadow(9px 9px 49px #7EC9F5);
+    }
+    
+    .animationRotate {
+        animation: spin 10s ease-in-out infinite;
+    }
+    
+    @-moz-keyframes spin {
+        100% {
+            -moz-transform: rotate(360deg);
+        }
+    }
+    
+    @-webkit-keyframes spin {
+        100% {
+            -webkit-transform: rotate(360deg);
+        }
+    }
+    
+    @keyframes spin {
+        100% {
+            -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+        }
+    }
+    
+    .phone {
+        position: absolute;
+        transform: translate(50%, -90%);
+        max-width: 50%;
+        display: block;
+        margin: auto;
+    }
+    
+    .arrow {
+        width: 30vw;
+        min-width: 200px;
+        position: absolute;
+        left: 5%;
+        top: 400px;
+    }
+    
+    @media screen and (max-width:768px) {
+        .arrow {
+            width: 30vw;
+            min-width: 200px;
+            position: absolute;
+            left: -10%;
+            top: calc(10% + 460px);
+        }
+    }
+    
+    .divider {
+        width: 100px;
+        height: 5px;
+        border-radius: 3px;
         background-color: $secondary;
-        & h2 {
-            font-size: 2em;
-            text-shadow: 5px 3px 0 $secondary;
-        }
+        float: right;
+        margin-top: 15px;
+        margin-bottom: 30px;
     }
-    &.webDev {
-        background-color: $highContrast;
-        & h2 {
-            font-size: 2em;
-            text-shadow: 5px 3px 0 $highContrast;
-        }
-    }
-    &.userEx {
-        background-color: $lowContrast;
-        & h2 {
-            font-size: 2em;
-            text-shadow: 5px 3px 0 $lowContrast;
-        }
-    }
-    // &.creativity {
-    //     background-color: $secondary;
-    // }
-}
-
-@media screen and (max-width:768px) {
+    
     .circle {
-        width: 120px;
-        height: 120px;
+        border-radius: 100%;
+        width: 150px;
+        height: 150px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin: 10px 0;
+        & h2 {
+            font-size: 24px;
+            text-align: center;
+            align-items: center;
+            color: white;
+        }
         &.design {
-            font-size: 10px;
+            background-color: $primary;
+            text-shadow: 5px 3px 0 $primary;
+            & h2 {
+                font-size: 3em;
+            }
         }
         &.mkt {
-            font-size: 10px;
+            background-color: $secondary;
+            & h2 {
+                font-size: 2em;
+                text-shadow: 5px 3px 0 $secondary;
+            }
         }
         &.webDev {
-            font-size: 10px;
+            background-color: $highContrast;
+            & h2 {
+                font-size: 2em;
+                text-shadow: 5px 3px 0 $highContrast;
+            }
         }
         &.userEx {
-            font-size: 14px;
+            background-color: $lowContrast;
+            & h2 {
+                font-size: 2em;
+                text-shadow: 5px 3px 0 $lowContrast;
+            }
+        }
+        // &.creativity {
+        //     background-color: $secondary;
+        // }
+    }
+    
+    @media screen and (max-width:768px) {
+        .circle {
+            width: 120px;
+            height: 120px;
+            &.design {
+                font-size: 10px;
+            }
+            &.mkt {
+                font-size: 10px;
+            }
+            &.webDev {
+                font-size: 10px;
+            }
+            &.userEx {
+                font-size: 10px;
+            }
         }
     }
-}
-
-.logoLight {
-    filter: invert(100%) brightness(110%) contrast(120%) hue-rotate(200deg)
-}
-
-.card {
-    width: 100%;
-    border-radius: 30px;
-    max-width: 290px;
-    background: rgba(255, 255, 255, 0.3);
-    border: 2px solid #FFFFFF;
-    box-shadow: 0px 4px 17px 6px rgba(126, 201, 245, 0.4);
-    // backdrop-filter: blur(29px);
-    /* Note: backdrop-filter has minimal browser support */
-    border-radius: 30px;
-    padding: 5%;
-    & .imageContainer {
-        position: relative;
-        & img {
-            border-radius: 30px;
-            width: 100%;
-        }
-        & .overlay {
-            position: absolute;
-            background: linear-gradient(145.12deg, #0000FF -25.39%, #29ABE2 73.16%);
-            z-index: 10;
-            top: 0;
-            bottom: 0;
-            width: 100%;
-            border-radius: 30px;
-            mix-blend-mode: overlay;
-            opacity: 0.5;
-        }
+    
+    .logoLight {
+        filter: invert(100%) brightness(110%) contrast(120%) hue-rotate(200deg)
     }
-    & span {
-        font-family: $mainFont;
-        color: $secondary;
-        font-weight: lighter;
-        font-size: 1.5rem;
-    }
-    & h5 {
-        color: $highContrast;
-    }
-    & p {
-        color: $highContrast;
-    }
-}
-
-.projects {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 50px;
-}
-
-.categories {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding-inline-start: 0;
-    margin: 2% 0 4% 0;
-    overflow-x: auto;
-    & li {
-        list-style-type: none;
-        font-family: $mainFont;
-        font-weight: medium;
-        font-size: 1.5em;
-        padding: 10px 20px;
-    }
-    & .active,
-     :hover {
-        background: linear-gradient(92.81deg, #3957ED 17.54%, #7EC9F5 96.29%);
-        padding: 10px 20px;
-        font-weight: 700;
-        color: white;
-        transition: 0.25s;
+    
+    .card {
+        width: 100%;
         border-radius: 30px;
-        transition: 0.3s ease-in-out;
-        cursor: pointer;
-    }
-}
-
-@media screen and (max-width:768px) {
-    .categories {
-        & li {
-            font-size: 1em;
+        max-width: 290px;
+        background: rgba(255, 255, 255, 0.3);
+        border: 2px solid #FFFFFF;
+        box-shadow: 0px 4px 17px 6px rgba(126, 201, 245, 0.4);
+        // backdrop-filter: blur(29px);
+        /* Note: backdrop-filter has minimal browser support */
+        border-radius: 30px;
+        padding: 5%;
+        & .imageContainer {
+            position: relative;
+            & img {
+                border-radius: 30px;
+                width: 100%;
+            }
+            & .overlay {
+                position: absolute;
+                background: linear-gradient(145.12deg, #0000FF -25.39%, #29ABE2 73.16%);
+                z-index: 10;
+                top: 0;
+                bottom: 0;
+                width: 100%;
+                border-radius: 30px;
+                mix-blend-mode: overlay;
+                opacity: 0.5;
+            }
+        }
+        & span {
+            font-family: $mainFont;
+            color: $secondary;
+            font-weight: lighter;
+            font-size: 1.5rem;
+        }
+        & h5 {
+            color: $highContrast;
+        }
+        & p {
+            color: $highContrast;
         }
     }
-}
+    
+    .projects {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 50px;
+    }
+    
+    @media screen and (max-width:768px) {
+        .projects {
+            grid-template-columns: 1fr 1fr;
+        }
+    }
+    
+    .categories {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        padding-inline-start: 0;
+        margin: 2% 0 4% 0;
+        overflow-x: auto;
+        & li {
+            list-style-type: none;
+            font-family: $mainFont;
+            font-weight: medium;
+            font-size: 1.5em;
+            padding: 10px 20px;
+        }
+        & .active,
+         :hover {
+            background: linear-gradient(92.81deg, #3957ED 17.54%, #7EC9F5 96.29%);
+            padding: 10px 20px;
+            font-weight: 700;
+            color: white;
+            transition: 0.25s;
+            border-radius: 30px;
+            transition: 0.3s ease-in-out;
+            cursor: pointer;
+        }
+    }
+    
+    @media screen and (max-width:768px) {
+        .categories {
+            & li {
+                font-size: 1em;
+            }
+        }
+    }
