--- a/scss/_responsive/_responsive.scss
+++ b/scss/_responsive/_responsive.scss
@@ -43,6 +43,10 @@
     justify-content: space-evenly;
 }
 
+.justify-content-flex-end {
+    justify-content: flex-end;
+}
+
 section {
     display: flex;
     justify-content: center;
