Projects running OK, filling up categories

--- a/scss/_components/_components.scss
+++ b/scss/_components/_components.scss
@@ -35,7 +35,7 @@
     header {
         background-image: url(../../img/bgHeader.svg);
         background-size: cover;
-        height: 90vh;
+        max-height: 750px;
         background-repeat: no-repeat;
         background-position: bottom;
     }
@@ -274,6 +274,10 @@
     }
     
     .logoLight {
+        filter: invert(100%) brightness(70%) contrast(120%) hue-rotate(200deg)
+    }
+    
+    .logoDark {
         filter: invert(100%) brightness(110%) contrast(120%) hue-rotate(200deg)
     }
     
