--- a/scss/_responsive/_responsive.scss
+++ b/scss/_responsive/_responsive.scss
@@ -15,6 +15,10 @@
     flex-wrap: wrap;
 }
 
+.noWrap {
+    flex-wrap: nowrap;
+}
+
 .d-flex {
     display: flex;
 }
@@ -59,7 +63,7 @@ section {
     display: flex;
     justify-content: center;
     max-width: 1024px;
-    margin: 0 auto;
+    margin: 8% auto;
     align-items: center;
     flex-wrap: wrap;
 }
