--- a/scss/main.css
+++ b/scss/main.css
@@ -129,6 +129,15 @@ header h4 {
   color: #A5AFB6;
 }
 
+h2.lightTitle {
+  margin-top: 5%;
+  color: none;
+  background: linear-gradient(270.2deg, #00a1ff 9.69%, #5f79fe 81.09%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 400;
+}
+
 #aboutMe h2 {
   margin-top: 5%;
   text-align: right;
@@ -223,6 +232,12 @@ body {
   background-size: cover;
   background-repeat: repeat;
   background-position: top;
+}
+
+.arrowHeadUp {
+  position: absolute;
+  right: 30%;
+  width: 50vw;
 }
 
 header {
@@ -371,11 +386,11 @@ nav li .lightMode .switch {
 
 @media screen and (max-width: 768px) {
   .arrow {
-    width: 30vw;
+    width: 60vw;
     min-width: 200px;
     position: absolute;
     left: -10%;
-    top: calc(10% + 460px);
+    top: calc(10% + 590px);
   }
 }
 .divider {
@@ -406,31 +421,35 @@ nav li .lightMode .switch {
 }
 .circle.design {
   background-color: #7EC9F5;
-  text-shadow: 5px 3px 0 #7EC9F5;
+  text-shadow: 3px 1px 0 #7EC9F5;
+  margin: auto;
 }
 .circle.design h2 {
   font-size: 3em;
 }
 .circle.mkt {
   background-color: #3957ED;
+  margin: auto;
 }
 .circle.mkt h2 {
   font-size: 2em;
-  text-shadow: 5px 3px 0 #3957ED;
+  text-shadow: 3px 1px 0 #3957ED;
 }
 .circle.webDev {
   background-color: #374249;
+  margin: auto;
 }
 .circle.webDev h2 {
   font-size: 2em;
-  text-shadow: 5px 3px 0 #374249;
+  text-shadow: 3px 1px 0 #374249;
 }
 .circle.userEx {
   background-color: #A5AFB6;
+  margin: auto;
 }
 .circle.userEx h2 {
   font-size: 2em;
-  text-shadow: 5px 3px 0 #A5AFB6;
+  text-shadow: 3px 1px 0 #A5AFB6;
 }
 
 @media screen and (max-width: 768px) {
@@ -463,7 +482,7 @@ nav li .lightMode .switch {
   width: 100%;
   border-radius: 30px;
   max-width: 290px;
-  background: rgba(255, 255, 255, 0.3);
+  background: rgba(255, 255, 255, 0.45);
   border: 2px solid #FFFFFF;
   box-shadow: 0px 4px 17px 6px rgba(126, 201, 245, 0.4);
   /* Note: backdrop-filter has minimal browser support */
@@ -576,6 +595,20 @@ span.project-link {
   margin-bottom: auto;
   flex-grow: 1;
   display: flex;
+}
+
+.pill {
+  padding: 6px 12px;
+  height: 45px;
+  border: solid white 3px;
+  border-radius: 30px;
+  color: #3957ED;
+  box-shadow: 3px 3px 10px 1px #7EC9F5;
+  margin: 5px;
+}
+.pill .logoPill {
+  width: 24px;
+  margin-right: 5px;
 }
 
 /* ----------------SPACING---------------- */
@@ -846,6 +879,10 @@ span.project-link {
   flex-wrap: wrap;
 }
 
+.noWrap {
+  flex-wrap: nowrap;
+}
+
 .d-flex {
   display: flex;
 }
@@ -890,7 +927,7 @@ section {
   display: flex;
   justify-content: center;
   max-width: 1024px;
-  margin: 0 auto;
+  margin: 8% auto;
   align-items: center;
   flex-wrap: wrap;
 }
