Proyect Cards almost done

--- a/scss/_responsive/_responsive.scss
+++ b/scss/_responsive/_responsive.scss
@@ -63,7 +63,7 @@ section {
     display: flex;
     justify-content: center;
     max-width: 1024px;
-    margin: 8% auto;
+    margin: auto;
     align-items: center;
     flex-wrap: wrap;
 }
