--- a/scss/_components/_components.scss
+++ b/scss/_components/_components.scss
@@ -44,7 +44,8 @@ body {
 .arrowHeadUp {
     position: absolute;
     right: 30%;
-    width: 50vw;
+    width: 60vw;
+    z-index: 0;
 }
 
 header {
@@ -304,11 +305,10 @@ nav {
     width: 100%;
     border-radius: 30px;
     max-width: 290px;
-    background: rgba(255, 255, 255, 0.45);
+    background: rgba(255, 255, 255, 0.15);
     border: 2px solid #FFFFFF;
     box-shadow: 0px 4px 17px 6px rgba(126, 201, 245, 0.4);
-    // backdrop-filter: blur(29px);
-    /* Note: backdrop-filter has minimal browser support */
+    backdrop-filter: blur(20px) brightness(100%);
     border-radius: 30px;
     padding: 5%;
     & .imageContainer {
@@ -342,18 +342,18 @@ nav {
         font-size: 1.5rem;
     }
     & h5 {
-        color: $highContrast;
+        color: $secondary;
         margin-bottom: 15px;
     }
     & p {
         color: $highContrast;
     }
     & .client-card-title {
-        margin-top: 15px;
+        // margin-top: 15px;
         font-family: $mainFont;
         font-weight: lighter;
         font-size: 1.2rem;
-        color: $secondary;
+        color: $highContrast;
     }
 }
 
@@ -371,6 +371,8 @@ nav {
 }
 
 .categories {
+    position: relative;
+    z-index: 1;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 10px;
@@ -421,6 +423,11 @@ span.project-link {
     margin-bottom: auto;
     flex-grow: 1;
     display: flex;
+    cursor: pointer;
+}
+
+span.project-link:hover {
+    cursor: pointer;
 }
 
 .pill {
@@ -435,5 +442,48 @@ span.project-link {
         width: 24px;
         // filter: saturate(0);
         margin-right: 5px;
+    }
+}
+
+.modalContainer {
+    position: absolute;
+    z-index: 5;
+    & .modalBg {
+        background-color: rgba(2, 40, 61, 0.6);
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        & .cardMeta {
+            width: 100%;
+            border-radius: 30px;
+            max-width: 290px;
+            background: rgba(255, 255, 255, 0.55);
+            border: 2px solid #FFFFFF;
+            box-shadow: 0px 4px 17px 6px rgba(126, 201, 245, 0.4);
+            backdrop-filter: blur(20px) brightness(100%);
+            border-radius: 30px;
+            padding: 2%;
+            & .client {
+                background: linear-gradient(270.2deg, #00a1ff 9.69%, #5f79fe 81.09%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+            }
+            & .title {
+                color: $secondary;
+                font-size: 1.5rem;
+            }
+            & .year {
+                color: $lightText;
+                margin-bottom: 20px;
+            }
+            & .description {
+                color: $highContrast;
+            }
+        }
     }
 }
