--- a/scss/_components/_components.scss
+++ b/scss/_components/_components.scss
@@ -461,7 +461,8 @@ span.project-link:hover {
         & .cardMeta {
             width: 100%;
             border-radius: 30px;
-            max-width: 290px;
+            max-width: 800px;
+            margin: 30px;
             background: rgba(255, 255, 255, 0.55);
             border: 2px solid #FFFFFF;
             box-shadow: 0px 4px 17px 6px rgba(126, 201, 245, 0.4);
@@ -478,12 +479,41 @@ span.project-link:hover {
                 font-size: 1.5rem;
             }
             & .year {
-                color: $lightText;
+                color: $darkMode;
                 margin-bottom: 20px;
             }
             & .description {
                 color: $highContrast;
             }
+            & .closeModal {
+                position: relative;
+                float: right;
+                margin: 10px 0 30px 0;
+                width: 40px;
+                transition-duration: 1s;
+                -webkit-transition: all 1s ease-in-out forwards;
+                -moz-transition: all 1s ease-in-out forwards;
+                -o-transition: all 1s ease-in-out forwards;
+                -ms-transition: all 1s ease-in-out forwards;
+                transition: all 1s ease-in-out forwards;
+                &:hover {
+                    transform: rotate(180deg) scale(1.25);
+                    cursor: pointer;
+                }
+            }
         }
+    }
+}
+
+.roundCorners {
+    border-radius: 20px;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg)
+    }
+    to {
+        transform: rotate(180deg) scale(1.25)
     }
 }
