--- a/scss/main.css
+++ b/scss/main.css
@@ -637,7 +637,8 @@ span.project-link:hover {
 .modalContainer .modalBg .cardMeta {
   width: 100%;
   border-radius: 30px;
-  max-width: 290px;
+  max-width: 800px;
+  margin: 30px;
   background: rgba(255, 255, 255, 0.55);
   border: 2px solid #FFFFFF;
   box-shadow: 0px 4px 17px 6px rgba(126, 201, 245, 0.4);
@@ -656,13 +657,46 @@ span.project-link:hover {
   font-size: 1.5rem;
 }
 .modalContainer .modalBg .cardMeta .year {
-  color: #acddff;
+  color: #252C4F;
   margin-bottom: 20px;
 }
 .modalContainer .modalBg .cardMeta .description {
   color: #374249;
 }
+.modalContainer .modalBg .cardMeta .closeModal {
+  position: relative;
+  float: right;
+  margin: 10px 0 30px 0;
+  width: 40px;
+  transition-duration: 1s;
+  transition: all 1s ease-in-out forwards;
+}
+.modalContainer .modalBg .cardMeta .closeModal:hover {
+  transform: rotate(180deg) scale(1.25);
+  cursor: pointer;
+}
 
+.roundCorners {
+  border-radius: 20px;
+}
+
+@-webkit-keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(180deg) scale(1.25);
+  }
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(180deg) scale(1.25);
+  }
+}
 /* ----------------SPACING---------------- */
 /* PADDING X */
 .padX-1 {
