--- a/scss/_components/_components.scss
+++ b/scss/_components/_components.scss
@@ -490,12 +490,12 @@ span.project-link:hover {
                 float: right;
                 margin: 10px 0 30px 0;
                 width: 40px;
-                transition-duration: 1s;
-                -webkit-transition: all 1s ease-in-out forwards;
-                -moz-transition: all 1s ease-in-out forwards;
-                -o-transition: all 1s ease-in-out forwards;
-                -ms-transition: all 1s ease-in-out forwards;
-                transition: all 1s ease-in-out forwards;
+                transition-duration: 0.5s;
+                -webkit-transition: all 0.5s ease-in-out forwards;
+                -moz-transition: all 0.5s ease-in-out forwards;
+                -o-transition: all 0.5s ease-in-out forwards;
+                -ms-transition: all 0.5s ease-in-out forwards;
+                transition: all 0.5s ease-in forwards;
                 &:hover {
                     transform: rotate(180deg) scale(1.25);
                     cursor: pointer;
