--- a/scss/main.css
+++ b/scss/main.css
@@ -668,8 +668,8 @@ span.project-link:hover {
   float: right;
   margin: 10px 0 30px 0;
   width: 40px;
-  transition-duration: 1s;
-  transition: all 1s ease-in-out forwards;
+  transition-duration: 0.5s;
+  transition: all 0.5s ease-in forwards;
 }
 .modalContainer .modalBg .cardMeta .closeModal:hover {
   transform: rotate(180deg) scale(1.25);
